force-app/main/default/objects/Employment_History__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Employment History</relationshipLabel>
    <relationshipName>Employment_History</relationshipName>
    <type>Lookup</type>
</CustomField>