force-app/main/default/objects/Employment_History__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to indicate whether the Contact still holds this position.</description>
    <inlineHelpText>Does this Contact still hold this position? If YES, this box should be checked. Generally, this box will remain unchecked.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>