force-app/main/default/objects/Employment_History__c/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that this position is the Contact&apos;s primary position.</description>
    <inlineHelpText>[DO NOT USE -- NOT YET IMPLEMENTED] Is this position the Contact&apos;s PRIMARY position? If yes, check this box. Note: This is a subjective determination.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>